--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <input type="text" id="nameAnimal" placeholder="Nome dell'animale..." />
+      </div>
+      <div>
+        <input type="text" id="nameOwner" placeholder="Nome del padrone..." />
+      </div>
+      <div>
+        <input type="text" id="species" placeholder="Specie..." />
+      </div>
+      <div>
+        <input type="text" id="breed" placeholder="Razza..." />
+      </div>
+      <button class="add">Aggiungi</button>
+      <ul class="containerResult"></ul>
+    </div>
 
     <script src="classes.js"></script>
-</body>
+  </body>
 </html>
